// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestCaseDetails > Error Message Formatting > should extract error message from stack trace 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=" grid grid-cols-1 lg:grid-cols-2 gap-4"
      >
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Error Details:
          </p>
          <div
            class="rounded-md bg-background p-3 border border-border"
          >
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Error Message:
              </p>
              <pre
                class="text-sm text-foreground leading-normal whitespace-pre-wrap font-sans overflow-x-auto mb-3"
              >
                Error: Timed out 30000ms waiting for expect(locator).toBeVisible()
              </pre>
            </div>
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Full Stack Trace:
              </p>
              <pre
                class="text-xs text-muted-foreground overflow-x-auto whitespace-pre-wrap font-mono leading-normal bg-muted p-2 rounded border border-border"
              >
                Error: Timed out 30000ms waiting for expect(locator).toBeVisible()
    at Timeout._onTimeout
    at listOnTimeout
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Error Message Formatting > should handle error with separate stack trace 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=" grid grid-cols-1 lg:grid-cols-2 gap-4"
      >
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Error Details:
          </p>
          <div
            class="rounded-md bg-background p-3 border border-border"
          >
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Error Message:
              </p>
              <pre
                class="text-sm text-foreground leading-normal whitespace-pre-wrap font-sans overflow-x-auto mb-3"
              >
                Error: Test failed
              </pre>
            </div>
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Full Stack Trace:
              </p>
              <pre
                class="text-xs text-muted-foreground overflow-x-auto whitespace-pre-wrap font-mono leading-normal bg-muted p-2 rounded border border-border"
              >
                Error: Test failed
    at line 1
    at line 2
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Layout Structure Snapshots > should render error and screenshots in grid layout 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=" grid grid-cols-1 lg:grid-cols-2 gap-4"
      >
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Error Details:
          </p>
          <div
            class="rounded-md bg-background p-3 border border-border"
          >
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Error Message:
              </p>
              <pre
                class="text-sm text-foreground leading-normal whitespace-pre-wrap font-sans overflow-x-auto mb-3"
              >
                Error: Timed out 30000ms waiting for expect(locator).toBeVisible()
              </pre>
            </div>
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Full Stack Trace:
              </p>
              <pre
                class="text-xs text-muted-foreground overflow-x-auto whitespace-pre-wrap font-mono leading-normal bg-muted p-2 rounded border border-border"
              >
                Error: locator.click: Target page, context or browser has been closed
Call log:
  - waiting for getByTestId('data-shaping-yes')
    - locator {swcMinify: true, reactStrictMode: true}
              </pre>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Screenshots (
            2
            ):
          </p>
          <div
            class="space-y-2"
          >
            <div
              class="rounded-md border border-border overflow-hidden bg-background"
            >
              <img
                alt="Screenshot 1"
                class="w-full h-auto"
                height="600"
                src="https://example.com/screenshot1.png"
                width="800"
              />
            </div>
            <div
              class="rounded-md border border-border overflow-hidden bg-background"
            >
              <img
                alt="Screenshot 2"
                class="w-full h-auto"
                height="600"
                src="https://example.com/screenshot2.png"
                width="800"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Layout Structure Snapshots > should render multiple attempts with separate cards 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class="flex items-center justify-between mb-3 pb-3 border-b border-border"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-destructive text-white [a&]:hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 text-xs"
            data-slot="badge"
          >
            Attempt 
            1
          </span>
          <span
            class="text-xs text-muted-foreground"
          >
            ✗ Failed
          </span>
        </div>
        <span
          class="text-xs text-muted-foreground"
        >
          3.00s
        </span>
      </div>
      <div
        class=""
      >
        <p
          class="text-sm font-semibold text-foreground mb-2"
        >
          Test Context
        </p>
        <div
          class="w-full"
          data-orientation="vertical"
          data-slot="accordion"
        >
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r5:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:r4:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  Test Configuration
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r4:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:r5:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-4 grid grid-cols-1 lg:grid-cols-2 gap-4"
      >
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Error Details:
          </p>
          <div
            class="rounded-md bg-background p-3 border border-border"
          >
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Error Message:
              </p>
              <pre
                class="text-sm text-foreground leading-normal whitespace-pre-wrap font-sans overflow-x-auto mb-3"
              >
                First attempt error
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-lg p-4 border bg-green-50 border-green-200"
    >
      <div
        class="flex items-center justify-between mb-3 pb-3 border-b border-border"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 text-xs"
            data-slot="badge"
          >
            Attempt 
            2
          </span>
          <span
            class="text-xs text-muted-foreground"
          >
            ✓ Passed
          </span>
        </div>
        <span
          class="text-xs text-muted-foreground"
        >
          2.00s
        </span>
      </div>
      <div
        class=""
      >
        <p
          class="text-sm font-semibold text-foreground mb-2"
        >
          Test Context
        </p>
        <div
          class="w-full"
          data-orientation="vertical"
          data-slot="accordion"
        >
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r7:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:r6:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  Test Configuration
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r6:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:r7:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Layout Structure Snapshots > should render single failed attempt with all sections in one card 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=""
      >
        <p
          class="text-sm font-semibold text-foreground mb-2"
        >
          Test Context
        </p>
        <div
          class="w-full"
          data-orientation="vertical"
          data-slot="accordion"
        >
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r1:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:r0:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  Test Configuration
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r0:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:r1:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r3:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:r2:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  user
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r2:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:r3:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <div
          data-testid="test-steps-viewer"
        >
          Steps: 
          1
          , URL: 
          none
          , ID: 
          none
        </div>
      </div>
      <div
        class="mt-4 grid grid-cols-1 lg:grid-cols-2 gap-4"
      >
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Error Details:
          </p>
          <div
            class="rounded-md bg-background p-3 border border-border"
          >
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Error Message:
              </p>
              <pre
                class="text-sm text-foreground leading-normal whitespace-pre-wrap font-sans overflow-x-auto mb-3"
              >
                Test timeout of 30000ms exceeded.
              </pre>
            </div>
            <div>
              <p
                class="text-xs font-semibold text-destructive mb-1.5"
              >
                Full Stack Trace:
              </p>
              <pre
                class="text-xs text-muted-foreground overflow-x-auto whitespace-pre-wrap font-mono leading-normal bg-muted p-2 rounded border border-border"
              >
                Error: Test timeout of 30000ms exceeded.
    at Timeout._onTimeout
              </pre>
            </div>
          </div>
        </div>
        <div>
          <p
            class="text-sm font-semibold text-foreground mb-2"
          >
            Screenshots (
            1
            ):
          </p>
          <div
            class="space-y-2"
          >
            <div
              class="rounded-md border border-border overflow-hidden bg-background"
            >
              <img
                alt="Screenshot 1"
                class="w-full h-auto"
                height="600"
                src="https://example.com/screenshot1.png"
                width="800"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Layout Structure Snapshots > should render test context section correctly 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=""
      >
        <p
          class="text-sm font-semibold text-foreground mb-2"
        >
          Test Context
        </p>
        <div
          class="w-full"
          data-orientation="vertical"
          data-slot="accordion"
        >
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r9:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:r8:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  Test Configuration
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r8:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:r9:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rb:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:ra:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  Route Selection
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:ra:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:rb:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b last:border-b-0 border-border"
            data-orientation="vertical"
            data-slot="accordion-item"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rd:"
                aria-expanded="false"
                class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm py-2 hover:no-underline"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-slot="accordion-trigger"
                data-state="closed"
                id="radix-:rc:"
                type="button"
              >
                <span
                  class="font-medium"
                >
                  stdout
                </span>
                <svg
                  class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:rc:"
              class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
              data-orientation="vertical"
              data-slot="accordion-content"
              data-state="closed"
              hidden=""
              id="radix-:rd:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestCaseDetails > Layout Structure Snapshots > should render with execution steps 1`] = `
<div>
  <div
    class="py-2 pl-7 space-y-4"
  >
    <div
      class="rounded-lg p-4 border bg-red-50 dark:bg-red-950/30 border-red-200 dark:border-red-800"
    >
      <div
        class=""
      >
        <div
          data-testid="test-steps-viewer"
        >
          Steps: 
          2
          , URL: 
          https://example.com/steps.json
          , ID: 
          test-123
        </div>
      </div>
    </div>
  </div>
</div>
`;
